samples/_failures_safe/1761091998_b26443_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7c9cb528.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_7c9cb528.c:129:5: error: expected identifier at end of input
  129 |     printf("Most frequent level: %s (%d occurrences)\n", stats->
      |     ^~~~~~
./samples/SAFE/__tmp_7c9cb528.c:129:5: error: expected declaration or statement at end of input
